--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 html,
 body,
 #root {
     width: 100%;
     height: 100vh;
+    font-family: "Montserrat", sans-serif;
+    font-size: 32px;
+    font-weight: 700;
 }
 
 .main_app {
