--- a/src/components/calculator/Calculator.module.css
+++ b/src/components/calculator/Calculator.module.css
@@ -1,16 +1,5 @@
-.calculator {
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-}
-
-.draggable {
-    padding: 20px;
-    cursor: pointer;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
-}
-
-.droppableHighlighted {
-    background-color: #ff1414;
+.calculator_wrapper{
+    min-width: 500px;
+    min-height: 500px;
+    background-color: bisque;
 }
