--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -1,12 +1,7 @@
-.sidebar {
+.sidebar_wrapper{
+    width: 500px;
+    height: 500px;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
-}
-
-.draggable {
-    padding: 20px;
-    cursor: pointer;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
+    row-gap: 20px;
 }
