--- a/src/components/calculator/Calculator.module.css
+++ b/src/components/calculator/Calculator.module.css
@@ -1,5 +1,8 @@
 .calculator_wrapper{
     min-width: 500px;
-    min-height: 500px;
-    background-color: bisque;
+    min-height: 800px;
+    border: 3px dashed rgba(130, 131, 131, 0.359);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
 }
