--- a/src/components/calculatorElements/computing/Computing.module.css
+++ b/src/components/calculatorElements/computing/Computing.module.css
@@ -1,6 +1,6 @@
-.numbers_wrapper {
+.computing_wrapper{
     width: 100%;
-    height: 400px;
+    height: 100px;
     background-color: rgb(255, 255, 255);
     box-shadow: 3px 1px 8px 4px rgba(34, 60, 80, 0.2);
     padding: 5px;
@@ -8,28 +8,18 @@
     cursor: pointer;
 }
 
-.numbers_span {
+.computing_span{
     width: 100%;
     height: 100%;
     /* background-color: rgb(243, 244, 246); */
     border-radius: 4px;
-    display: grid;
-    gap: 20px;
-    justify-items: center;
-    align-items: center;
-    justify-content: space-between;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 90px);
+    display: flex;
+    gap: 10px;
 }
 
-.numbers_span button {
+.computing_span button{
     width: 100%;
     height: 100%;
     border: 3px solid rgba(130, 131, 131, 0.359);
     border-radius: 5px;
-}
-
-.numbers_zero{
-    min-width: 100%;
-    grid-column: 3 / 1;
 }
