--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,16 @@ body,
 .main_app {
     height: 100vh;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    gap: 10%;
+    justify-content: center;
+    gap: 50px;
+}
+
+.calculator__container{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
 }
