--- a/src/components/calculator/Calculator.module.css
+++ b/src/components/calculator/Calculator.module.css
@@ -6,3 +6,14 @@
     display: flex;
     justify-content: center;
 }
+
+.calculator_wrapper__active{
+    min-width: 500px;
+    min-height: 800px;
+    padding: 20px;
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    gap: 20px;
+
+}
