--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@ body,
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
+    /* gap: 50px; */
 }
 
 .calculator__container{
     display: flex;
-    height: 100%;
+    height: 90vh;
     align-items: center;
     justify-content: center;
     gap: 100px;
