--- a/src/components/calculatorElements/computing/Computing.module.css
+++ b/src/components/calculatorElements/computing/Computing.module.css
@@ -1,6 +1,7 @@
 .computing_wrapper{
     width: 100%;
-    height: 100px;
+    /* height: 100px; */
+    height: 80px;
     background-color: rgb(255, 255, 255);
     box-shadow: 3px 1px 8px 4px rgba(34, 60, 80, 0.2);
     padding: 5px;
