--- a/src/components/calculatorElements/display/Display.module.css
+++ b/src/components/calculatorElements/display/Display.module.css
@@ -1,6 +1,6 @@
 .display_wrapper {
     width: 100%;
-    height: 100px;
+    height: 80px;
     background-color: rgb(255,255,255);
     box-shadow: 3px 1px 8px 4px rgba(34, 60, 80, 0.2);
     padding: 5px;
@@ -16,4 +16,6 @@
     align-items: center;
     justify-content: flex-end;
     border-radius: 4px;
+    cursor: pointer;
+    user-select: none;
 }
