--- a/src/components/calculator/Calculator.module.css
+++ b/src/components/calculator/Calculator.module.css
@@ -6,6 +6,7 @@
     border-radius: 5px;
     display: flex;
     justify-content: center;
+    user-select: none;
 }
 
 .calculator_wrapper__active{
@@ -16,4 +17,5 @@
     justify-content: start;
     flex-direction: column;
     gap: 20px;
+    user-select: none;
 }
