--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 html,
 body,
 #root {
     width: 100%;
     height: 100vh;
-    font-family: "Montserrat", sans-serif;
+    /* font-family: "Montserrat", sans-serif; */
+    font-family: "Ubuntu", sans-serif;
     font-size: 32px;
-    font-weight: 700;
+    font-weight: 900;
     background-color: rgb(243,244,246);
     overflow: hidden;
 }
 
-.main_app {
+.main_app{
     height: 100vh;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 500px 500px;
+    justify-items: center;
     align-items: center;
     justify-content: center;
-    /* gap: 50px; */
-}
-
-.calculator__container{
-    display: flex;
-    height: 90vh;
-    align-items: center;
-    justify-content: center;
-    gap: 100px;
+    align-content: center;
+    gap: 2%;
 }
