--- a/src/components/calculator/Calculator.module.css
+++ b/src/components/calculator/Calculator.module.css
@@ -10,9 +10,9 @@
 }
 
 .calculator_wrapper__active{
-    min-width: 500px;
-    min-height: 800px;
-    padding: 20px;
+    /* min-width: 500px; */
+    width: 100%;
+    min-height: 70vh;
     display: flex;
     justify-content: start;
     flex-direction: column;
