--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -5,5 +5,5 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
-    justify-content: center;
+    justify-content: space-between;
 }
