--- a/src/components/toggleBtn/ToggleBtn.module.css
+++ b/src/components/toggleBtn/ToggleBtn.module.css
@@ -1,39 +1,68 @@
 .toggle__wrapper{
-    width: 300px;
+    width: 100%;
     height: 5vh;
     border-radius: 5px;
     background-color: rgb(225,230,230);
     display: flex;
-    transition: all .4s;
 }
 
-.on{
+.modes_wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 25px;
+}
+
+.mode{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.active{
+    border-radius: 5px;
+    border: 1px solid rgb(211, 216, 216);
+    width: 50%;
+    height: 100%;
+    background-color: rgb(243,244,246);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* .on{
     justify-content: start;
 }
 
 .off{
     justify-content: end;
-    transition: all .4s;
-}
+} */
 
-.toggle__on{
+/* .toggle__on{
     border-radius: 5px;
-    border: 3px solid rgb(211, 216, 216);
-    width: 160px;
+    border: 1px solid rgb(211, 216, 216);
+    width: 50%;
     height: 100%;
     background-color: rgb(243,244,246);
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 25px;
+    gap: 10px;
 }
 
 .toggle__off{
     border-radius: 5px;
-    border: 3px solid rgb(211, 216, 216);
-    width: 160px;
+    border: 1px solid rgb(211, 216, 216);
+    width: 50%;
     height: 100%;
     background-color: rgb(243,244,246);
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    font-size: 25px;
+    gap: 10px;
+} */
